soup-session: fix a deadlock when aborting a SoupSessionSync

We need to signal conn_cond when removing an item from the queue,
since flush_queue() expects that... (and also, since in some cases,
removing a message from the queue will allow another one to start).

https://bugzilla.gnome.org/show_bug.cgi?id=691399